--- a/index.html
+++ b/index.html
@@ -3,71 +3,80 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Hacker Password Extractor dengan Limit Akses</title>
+<title>Login dan Hacker Password Extractor</title>
 <style>
   body {
     background-color: #0d1117;
     color: #c9d1d9;
     font-family: 'Courier New', Courier, monospace;
-    padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    justify-content: center;
+    height: 100vh;
     margin: 0;
+    padding: 20px;
   }
-  h1 {
-    font-weight: 700;
-    font-size: 2.5rem;
-    margin-bottom: 40px;
-    color: #58a6ff;
-    text-shadow: 0 0 8px #58a6ff99;
-  }
-  form {
-    display: flex;
-    gap: 15px;
-    max-width: 450px;
+  #loginContainer, #prankContainer {
+    background-color: #161b22;
+    padding: 40px 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px #238636aa;
+    max-width: 600px;
     width: 100%;
-    margin-bottom: 40px;
-    align-items: center;
+    box-sizing: border-box;
   }
-  input[type="email"] {
-    flex: 1;
+  h1, h2 {
+    color: #58a6ff;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  #loginContainer h2 {
+    margin-bottom: 25px;
+  }
+  input[type="password"], input[type="email"] {
+    width: 100%;
     padding: 12px 16px;
     font-size: 1.1rem;
     border: none;
-    border-radius: 5px;
-    background-color: #161b22;
+    border-radius: 6px;
+    background-color: #0d1117;
     color: #c9d1d9;
     box-shadow: inset 0 0 8px #30363d;
-    transition: box-shadow 0.3s ease;
+    margin-bottom: 20px;
   }
-  input[type="email"]:focus {
+  input[type="password"]:focus, input[type="email"]:focus {
     outline: none;
     box-shadow: 0 0 10px #58a6ff;
-    background-color: #0d1117;
   }
   button {
     background-color: #238636;
     border: none;
     padding: 12px 24px;
-    border-radius: 5px;
+    border-radius: 6px;
     font-weight: 700;
     font-size: 1.1rem;
     color: #c9d1d9;
     cursor: pointer;
-    box-shadow: 0 0 8px #238636aa;
-    transition: background-color 0.3s ease;
+    box-shadow: 0 0 10px #238636aa;
     user-select: none;
+    transition: background-color 0.3s ease;
   }
   button:hover:not(:disabled) {
     background-color: #2ea043;
-    box-shadow: 0 0 12px #2ea043cc;
+    box-shadow: 0 0 15px #2ea043cc;
   }
   button:disabled {
     background-color: #444c56;
     cursor: not-allowed;
     box-shadow: none;
+  }
+  #errorMsg {
+    color: #ff7b72;
+    font-weight: 600;
+    margin-bottom: 15px;
+    text-align: center;
+    min-height: 22px;
   }
   #limitInfo {
     color: #79c0ff;
@@ -76,6 +85,14 @@
     font-size: 1.1rem;
     min-width: 140px;
     text-align: center;
+  }
+  form#hackForm {
+    display: flex;
+    gap: 15px;
+    max-width: 600px;
+    width: 100%;
+    margin-bottom: 40px;
+    align-items: center;
   }
   #loadingContainer {
     width: 100%;
@@ -188,171 +205,205 @@
     background-color: #2ea043;
     box-shadow: 0 0 12px #2ea043cc;
   }
+
+  /* Sembunyikan prank container default */
+  #prankContainer {
+    display: none;
+  }
 </style>
 </head>
 <body>
 
-  <h1>Hacker Password Extractor</h1>
-
-  <form id="hackForm" autocomplete="off" spellcheck="false" novalidate>
-    <input
-      type="email"
-      id="email"
-      name="email"
-      placeholder="Masukkan email target"
-      required
-      aria-label="Masukkan email target"
-      autocomplete="off"
-      spellcheck="false"
-    />
-    <button type="submit" aria-label="Hack password email target" id="hackBtn">Hack</button>
-    <div id="limitInfo" aria-live="polite" aria-atomic="true">Sisa akses: 5</div>
-  </form>
-
-  <div id="loadingContainer" aria-live="polite" role="status" aria-label="Proses loading">
-    <div>Proses mengekstrak password...</div>
-    <div id="progressPercent">0%</div>
-    <div id="progressBar" aria-hidden="true">
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-      <div class="block animate"></div>
-    </div>
+  <!-- Halaman Login -->
+  <div id="loginContainer" role="main" aria-label="Halaman login kode akses">
+    <h2>Masukkan Kode Akses</h2>
+    <form id="loginForm" autocomplete="off" novalidate>
+      <input type="password" id="accessCode" placeholder="Kode akses rahasia" aria-label="Kode akses rahasia" required />
+      <div id="errorMsg" aria-live="assertive"></div>
+      <button type="submit" aria-label="Submit kode akses">Masuk</button>
+    </form>
   </div>
 
-  <div id="resultContainer" aria-live="polite" role="region">
-    <div>Email target: <strong id="emailResult"></strong></div>
-    <div style="margin-top: 12px;">
-      Password ditemukan: <span id="passwordDisplay"></span>
-      <button id="togglePasswordBtn" aria-pressed="false" aria-label="Toggle tampilkan password">Lihat Password</button>
+  <!-- Halaman Prank -->
+  <div id="prankContainer" role="main" aria-label="Halaman prank hacker password extractor">
+
+    <h1>Hacker Password Extractor</h1>
+
+    <form id="hackForm" autocomplete="off" spellcheck="false" novalidate>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Masukkan email target"
+        required
+        aria-label="Masukkan email target"
+        autocomplete="off"
+        spellcheck="false"
+      />
+      <button type="submit" aria-label="Hack password email target" id="hackBtn">Hack</button>
+      <div id="limitInfo" aria-live="polite" aria-atomic="true">Sisa akses: 5</div>
+    </form>
+
+    <div id="loadingContainer" aria-live="polite" role="status" aria-label="Proses loading">
+      <div>Proses mengekstrak password...</div>
+      <div id="progressPercent">0%</div>
+      <div id="progressBar" aria-hidden="true">
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+        <div class="block animate"></div>
+      </div>
     </div>
+
+    <div id="resultContainer" aria-live="polite" role="region">
+      <div>Email target: <strong id="emailResult"></strong></div>
+      <div style="margin-top: 12px;">
+        Password ditemukan: <span id="passwordDisplay"></span>
+        <button id="togglePasswordBtn" aria-pressed="false" aria-label="Toggle tampilkan password">Lihat Password</button>
+      </div>
+    </div>
+
   </div>
 
-  <script>
-    const form = document.getElementById('hackForm');
-    const loadingContainer = document.getElementById('loadingContainer');
-    const progressPercent = document.getElementById('progressPercent');
-    const resultContainer = document.getElementById('resultContainer');
-    const emailResult = document.getElementById('emailResult');
-    const passwordDisplay = document.getElementById('passwordDisplay');
-    const togglePasswordBtn = document.getElementById('togglePasswordBtn');
-    const hackBtn = document.getElementById('hackBtn');
-    const limitInfo = document.getElementById('limitInfo');
+<script>
+  // Login bagian
+  const loginForm = document.getElementById('loginForm');
+  const accessCodeInput = document.getElementById('accessCode');
+  const errorMsg = document.getElementById('errorMsg');
+  const loginContainer = document.getElementById('loginContainer');
+  const prankContainer = document.getElementById('prankContainer');
 
-    let fullPassword = '';
-    let maskedPassword = '';
-    let isPasswordShown = false;
-    let attemptsLeft = 5;
+  const correctCode = 'prank123'; // Ganti kode akses sesuai keinginan
 
-    function generateRandomPassword(length = 12) {
-      const chars = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-      let password = '';
-      for (let i = 0; i < length; i++) {
-        password += chars.charAt(Math.floor(Math.random() * chars.length));
-      }
-      return password;
+  if (localStorage.getItem('accessGranted') === 'true') {
+    showPrank();
+  }
+
+  loginForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const enteredCode = accessCodeInput.value.trim();
+
+    if (enteredCode === correctCode) {
+      localStorage.setItem('accessGranted', 'true');
+      showPrank();
+    } else {
+      errorMsg.textContent = 'Kode akses salah! Coba lagi.';
+      accessCodeInput.value = '';
+      accessCodeInput.focus();
+    }
+  });
+
+  function showPrank() {
+    loginContainer.style.display = 'none';
+    prankContainer.style.display = 'block';
+  }
+
+  // Bagian prank
+
+  const hackForm = document.getElementById('hackForm');
+  const emailInput = document.getElementById('email');
+  const hackBtn = document.getElementById('hackBtn');
+  const limitInfo = document.getElementById('limitInfo');
+  const loadingContainer = document.getElementById('loadingContainer');
+  const progressPercent = document.getElementById('progressPercent');
+  const progressBar = document.getElementById('progressBar');
+  const resultContainer = document.getElementById('resultContainer');
+  const emailResult = document.getElementById('emailResult');
+  const passwordDisplay = document.getElementById('passwordDisplay');
+  const togglePasswordBtn = document.getElementById('togglePasswordBtn');
+
+  let attemptsLeft = 5;
+  let fullPassword = '';
+  let maskedPassword = '';
+  let isPasswordShown = false;
+
+  function generateRandomPassword() {
+    const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+    let pwd = '';
+    for (let i = 0; i < 12; i++) {
+      pwd += chars.charAt(Math.floor(Math.random() * chars.length));
+    }
+    return pwd;
+  }
+
+  function maskPassword(pwd) {
+    if (pwd.length <= 4) return '*'.repeat(pwd.length);
+    const first = pwd.slice(0, 2);
+    const last = pwd.slice(-2);
+    const masked = '*'.repeat(pwd.length - 4);
+    return first + masked + last;
+  }
+
+  function updateLimitDisplay() {
+    limitInfo.textContent = `Sisa akses: ${attemptsLeft}`;
+    if (attemptsLeft <= 0) {
+      hackBtn.disabled = true;
+      limitInfo.textContent = 'Sisa akses: 0 (limit habis)';
+    }
+  }
+
+  hackForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    if (attemptsLeft <= 0) return;
+
+    const email = emailInput.value.trim();
+    if (!email) {
+      alert('Mohon masukkan email target.');
+      return;
     }
 
-    function maskPassword(password) {
-      const len = password.length;
-      const maskCount = Math.floor(len * (Math.random() * 0.2 + 0.4)); // masker 40-60%
-      const indexes = new Set();
+    hackBtn.disabled = true;
+    loadingContainer.style.display = 'flex';
+    progressPercent.textContent = '0%';
+    progressBar.querySelectorAll('.block').forEach(b => b.classList.add('animate'));
+    resultContainer.style.display = 'none';
 
-      while (indexes.size < maskCount) {
-        indexes.add(Math.floor(Math.random() * len));
+    let progress = 0;
+    const duration = 30000; // 30 detik
+    const stepTime = 100;
+    const totalSteps = duration / stepTime;
+
+    const interval = setInterval(() => {
+      progress++;
+      const percent = Math.floor((progress / totalSteps) * 100);
+      progressPercent.textContent = percent + '%';
+
+      if (percent >= 100) {
+        clearInterval(interval);
+        progressBar.querySelectorAll('.block').forEach(b => b.classList.remove('animate'));
+        displayResult(email);
+        hackBtn.disabled = false;
       }
+    }, stepTime);
 
-      return password.split('').map((char, i) => indexes.has(i) ? '*' : char).join('');
-    }
-
-    togglePasswordBtn.addEventListener('click', () => {
-      if (!fullPassword) return;
-
-      isPasswordShown = !isPasswordShown;
-      if (isPasswordShown) {
-        passwordDisplay.textContent = fullPassword;
-        togglePasswordBtn.textContent = 'Sembunyi Password';
-        togglePasswordBtn.setAttribute('aria-pressed', 'true');
-      } else {
-        passwordDisplay.textContent = maskedPassword;
-        togglePasswordBtn.textContent = 'Lihat Password';
-        togglePasswordBtn.setAttribute('aria-pressed', 'false');
-      }
-    });
-
-    function updateLimitDisplay() {
-      limitInfo.textContent = `Sisa akses: ${attemptsLeft}`;
-      if (attemptsLeft <= 0) {
-        hackBtn.disabled = true;
-      }
-    }
-
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-
-      if (attemptsLeft <= 0) {
-        alert('Limit akses sudah habis. Tidak bisa generate password lagi.');
-        return;
-      }
-
-      const email = form.email.value.trim();
-      if (!email) {
-        alert('Mohon masukkan email yang valid.');
-        return;
-      }
-
-      // Kurangi limit
-      attemptsLeft--;
-      updateLimitDisplay();
-
-      // Reset UI
-      resultContainer.style.display = 'none';
-      loadingContainer.style.display = 'flex';
-      progressPercent.textContent = '0%';
-
-      // Mulai animasi balok
-      document.querySelectorAll('.block').forEach(b => b.classList.add('animate'));
-
-      let progress = 0;
-      const duration = 30000; // 30 detik
-      const stepTime = 100; // update tiap 0.1 detik
-      const totalSteps = duration / stepTime;
-
-      const interval = setInterval(() => {
-        progress++;
-        const percent = Math.floor((progress / totalSteps) * 100);
-        progressPercent.textContent = percent + '%';
-
-        // Stop animasi saat progress 100%
-        if (percent >= 100) {
-          clearInterval(interval);
-          // Hentikan animasi balok
-          document.querySelectorAll('.block').forEach(b => b.classList.remove('animate'));
-          // Tampilkan hasil
-          loadingContainer.style.display = 'flex'; // Tetap tampil, tapi animasi mati
-          displayResult(email);
-        }
-      }, stepTime);
-
-    });
-
-    function displayResult(email) {
-      emailResult.textContent = email;
-      fullPassword = generateRandomPassword();
-      maskedPassword = maskPassword(fullPassword);
-      isPasswordShown = false;
-      passwordDisplay.textContent = maskedPassword;
-      togglePasswordBtn.textContent = 'Lihat Password';
-      togglePasswordBtn.setAttribute('aria-pressed', 'false');
-      resultContainer.style.display = 'block';
-    }
-
+    attemptsLeft--;
     updateLimitDisplay();
-  </script>
+  });
+
+  function displayResult(email) {
+    emailResult.textContent = email;
+    fullPassword = generateRandomPassword();
+    maskedPassword = maskPassword(fullPassword);
+    isPasswordShown = false;
+    passwordDisplay.textContent = maskedPassword;
+    togglePasswordBtn.textContent = 'Lihat Password';
+    togglePasswordBtn.setAttribute('aria-pressed', 'false');
+    resultContainer.style.display = 'block';
+  }
+
+  togglePasswordBtn.addEventListener('click', () => {
+    if (!fullPassword) return;
+    isPasswordShown = !isPasswordShown;
+    passwordDisplay.textContent = isPasswordShown ? fullPassword : maskedPassword;
+    togglePasswordBtn.textContent = isPasswordShown ? 'Sembunyikan Password' : 'Lihat Password';
+    togglePasswordBtn.setAttribute('aria-pressed', isPasswordShown.toString());
+  });
+
+</script>
 
 </body>
 </html>
