--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     const accessCodeInput = document.getElementById('accessCodeInput');
     const errorMsg = document.getElementById('errorMsg');
 
-    const correctCode = 'prank123';
+    const correctCode = 'againstworld';
 
     // Periksa status login pada localStorage
     function checkLoginStatus() {
